test/files/neg/macro-deprecate-dont-touch-backquotedidents/Macros_Package_10.scala
package `macro`

package `macro`.bar